--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -37,8 +37,8 @@ $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse i
 $main-bg: #FFFFFF !default;
 $table-row:#F1FAE2 !default;
 $table-row-odd:#F5FBEA !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
+$aside-notice-bg: #f6fcec !default;
+$aside-warning-bg: #84d404 !default;
 $aside-success-bg: #6ac174 !default;
 $search-notice-bg: #c97a7e !default;
 
